Archivo con resultados parciales de entrenamiento

--- a/i3dcrimefinetuning.ipynb
+++ b/i3dcrimefinetuning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bc5a2e53",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "from torch.utils.data import random_split\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# === Configuración adaptativa (CUDA/CPU) ===\n",
+    "# === Configuración (CUDA/CPU) ===\n",
     "CLIP_DURATION = 2.56  # segundos\n",
     "STRIDE = 2.1  # segundos\n",
     "EPOCHS = 10\n",
@@ -928,7 +928,81 @@
       "\n",
       "📅 --- Época 1/10 ---\n",
       "✅ Primer batch cargado y procesado.\n",
-      "   [   1/3700] Loss: 0.9519 | Acc: 100.00% | ETA: 202224s | Preds: {'Robo': 2} | GPU: 0.5GB\n"
+      "   [   1/3700] Loss: 0.9519 | Acc: 100.00% | ETA: 202224s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [ 201/3700] Loss: 0.3899 | Acc: 61.69% | ETA: 11098s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [ 401/3700] Loss: 0.5272 | Acc: 67.96% | ETA: 10002s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [ 601/3700] Loss: 1.3740 | Acc: 74.04% | ETA: 9254s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [ 801/3700] Loss: 0.0957 | Acc: 78.46% | ETA: 8549s | Preds: {'Robo': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [1001/3700] Loss: 0.0043 | Acc: 81.87% | ETA: 7952s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [1201/3700] Loss: 0.0230 | Acc: 83.64% | ETA: 7329s | Preds: {'Robo': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [1401/3700] Loss: 0.0075 | Acc: 85.40% | ETA: 6762s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [1601/3700] Loss: 0.0072 | Acc: 86.82% | ETA: 6201s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [1801/3700] Loss: 0.0110 | Acc: 87.84% | ETA: 5616s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [2001/3700] Loss: 0.0052 | Acc: 88.93% | ETA: 5010s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [2201/3700] Loss: 0.0660 | Acc: 89.80% | ETA: 4404s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [2401/3700] Loss: 0.0634 | Acc: 90.50% | ETA: 3818s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [2601/3700] Loss: 0.0608 | Acc: 91.00% | ETA: 3226s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [2801/3700] Loss: 0.0026 | Acc: 91.57% | ETA: 2628s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [3001/3700] Loss: 0.0015 | Acc: 91.97% | ETA: 2032s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [3201/3700] Loss: 0.0011 | Acc: 92.27% | ETA: 1445s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [3401/3700] Loss: 0.0234 | Acc: 92.53% | ETA: 863s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [3601/3700] Loss: 0.0016 | Acc: 92.77% | ETA: 285s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [3700/3700] Loss: 0.0030 | Acc: 92.93% | ETA:   0s | Preds: {'Normal': 2} | GPU: 0.5GB\n",
+      "   ✅ Época 1 completada en 10646s\n",
+      "      Train Loss: 0.2105, Train Acc: 92.93%\n",
+      "      Valid Loss: 1.3587, Valid Acc: 62.70%\n",
+      "      LR actual: 1.00e-04\n",
+      "      ⚠️ SOBREAJUSTE DETECTADO: Gap Loss = 1.148\n",
+      "      ⚠️ SOBREAJUSTE DETECTADO: Gap Accuracy = 30.2%\n",
+      "      ⚠️ Posible sobreajuste: Val Loss 1.359 >> Train Loss 0.210\n",
+      "💾 Checkpoint guardado: checkpoint_epoch_1.pth\n",
+      "   ⭐ Nuevo mejor modelo guardado (Val Loss: 1.3587)\n",
+      "      VRAM máxima usada: 2.0 GB\n",
+      "\n",
+      "📅 --- Época 2/10 ---\n",
+      "✅ Primer batch cargado y procesado.\n",
+      "   [   1/3700] Loss: 0.0022 | Acc: 100.00% | ETA: 9279s | Preds: {'Robo': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [ 201/3700] Loss: 0.0005 | Acc: 98.51% | ETA: 9340s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [ 401/3700] Loss: 0.0020 | Acc: 99.00% | ETA: 8944s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [ 601/3700] Loss: 0.0022 | Acc: 99.25% | ETA: 8385s | Preds: {'Robo': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [ 801/3700] Loss: 0.0024 | Acc: 99.31% | ETA: 7870s | Preds: {'Normal': 2} | GPU: 0.5GB\n",
+      "   [1001/3700] Loss: 0.0994 | Acc: 98.95% | ETA: 7339s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [1201/3700] Loss: 0.0027 | Acc: 98.71% | ETA: 6799s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [1401/3700] Loss: 0.0938 | Acc: 98.61% | ETA: 6252s | Preds: {'Violencia': 2} | GPU: 0.5GB\n",
+      "   [1601/3700] Loss: 0.0020 | Acc: 98.72% | ETA: 5692s | Preds: {'Robo': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [1801/3700] Loss: 0.0084 | Acc: 98.72% | ETA: 5155s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [2001/3700] Loss: 0.0201 | Acc: 98.65% | ETA: 4605s | Preds: {'Violencia': 2} | GPU: 0.5GB\n",
+      "   [2201/3700] Loss: 0.0000 | Acc: 98.68% | ETA: 4059s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [2401/3700] Loss: 0.0022 | Acc: 98.71% | ETA: 3516s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [2601/3700] Loss: 0.0053 | Acc: 98.64% | ETA: 2969s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [2801/3700] Loss: 0.0011 | Acc: 98.64% | ETA: 2428s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [3001/3700] Loss: 0.0003 | Acc: 98.70% | ETA: 1887s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [3201/3700] Loss: 0.0010 | Acc: 98.73% | ETA: 1346s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [3401/3700] Loss: 0.0007 | Acc: 98.81% | ETA: 806s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [3601/3700] Loss: 0.0042 | Acc: 98.78% | ETA: 266s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [3700/3700] Loss: 0.1558 | Acc: 98.77% | ETA:   0s | Preds: {'Robo': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   ✅ Época 2 completada en 9973s\n",
+      "      Train Loss: 0.0479, Train Acc: 98.77%\n",
+      "      Valid Loss: 1.6561, Valid Acc: 53.99%\n",
+      "      LR actual: 1.00e-04\n",
+      "      ⚠️ SOBREAJUSTE DETECTADO: Gap Loss = 1.608\n",
+      "      ⚠️ SOBREAJUSTE DETECTADO: Gap Accuracy = 44.8%\n",
+      "      ⚠️ Posible sobreajuste: Val Loss 1.656 >> Train Loss 0.048\n",
+      "      ✅ Progreso consistente: Loss bajó 0.1626\n",
+      "💾 Checkpoint guardado: checkpoint_epoch_2.pth\n",
+      "   📉 Sin mejora por 1 épocas\n",
+      "      VRAM máxima usada: 1.2 GB\n",
+      "\n",
+      "📅 --- Época 3/10 ---\n",
+      "✅ Primer batch cargado y procesado.\n",
+      "   [   1/3700] Loss: 0.0004 | Acc: 100.00% | ETA: 9739s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n",
+      "   [ 201/3700] Loss: 0.0281 | Acc: 99.50% | ETA: 9291s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [ 401/3700] Loss: 0.0008 | Acc: 99.25% | ETA: 8786s | Preds: {'Normal': 2} | GPU: 0.5GB\n",
+      "   [ 601/3700] Loss: 0.0030 | Acc: 99.08% | ETA: 8275s | Preds: {'Normal': 1, 'Robo': 1} | GPU: 0.5GB\n",
+      "   [ 801/3700] Loss: 0.0034 | Acc: 99.00% | ETA: 7766s | Preds: {'Robo': 2} | GPU: 0.5GB\n",
+      "   [1001/3700] Loss: 0.0302 | Acc: 99.00% | ETA: 7233s | Preds: {'Violencia': 2} | GPU: 0.5GB\n",
+      "   [1201/3700] Loss: 0.0006 | Acc: 99.00% | ETA: 6680s | Preds: {'Violencia': 2} | GPU: 0.5GB\n",
+      "   [1401/3700] Loss: 0.5464 | Acc: 99.04% | ETA: 6186s | Preds: {'Normal': 1, 'Violencia': 1} | GPU: 0.5GB\n"
      ]
     }
    ],
