Se incorpora código para Evaluación de Test Set
Última celda incluye código para aplicar sobre el test set para los modelos .pth disponibles
*Adaptar variables globales según hardware

--- a/i3dcrimefinetuning.ipynb
+++ b/i3dcrimefinetuning.ipynb
@@ -5,7 +5,8 @@
    "id": "2f203bf6",
    "metadata": {},
    "source": [
-    "Importaciones y configuración"
+    "#Proyecto de Tópicos de Análisis de Video\n",
+    "Nicolás Sepúlveda - Sebastián Paillao\n"
    ]
   },
   {
@@ -25,6 +26,14 @@
    "source": [
     "import sys\n",
     "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fada7e4",
+   "metadata": {},
+   "source": [
+    "Configuración general e importaciones importantes"
    ]
   },
   {
@@ -63,7 +72,9 @@
    "cell_type": "markdown",
    "id": "d0395e5f",
    "metadata": {},
-   "source": []
+   "source": [
+    "Configuración del hardware a utilizar, según disponibilidad de GPU"
+   ]
   },
   {
    "cell_type": "code",
@@ -131,6 +142,15 @@
     "    print(f\"⚠️  CUDA no disponible, usando CPU\")\n",
     "    print(f\"🖥️  Device: {device}\")\n",
     "    print(f\"💡 Para usar GPU, ejecuta: setup_cuda.bat\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88b54658",
+   "metadata": {},
+   "source": [
+    "#### Clase para clips con Sliding Window\n",
+    "Se crea una clase para generar clips usando una sliding window. Esto será útil para usar sobre los videos del dataset, tanto para el entrenamiento como para el testeo, pues I3D y modelos similares trabajan con clips, mientras que los videos del dataset pueden ser largos, por lo que necesitaremos crear un conjunto de clips a partir de los videos. Estos se armarán con una cantidad de frames indicada, dividiendo el video original considerando el stride dado, para solapamiento de los clips."
    ]
   },
   {
@@ -275,6 +295,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ef82d3b",
+   "metadata": {},
+   "source": [
+    "#### Transformaciones\n",
+    "Se aplicarán las siguientes transformaciones a los videos. Para el train set se aplican un conjunto de transformaciones para hacer data augmentation. Para validación y test, transformaciones enfocadas a normalización."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "id": "d4c90264",
@@ -370,6 +399,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7ee529c",
+   "metadata": {},
+   "source": [
+    "### Armado del dataset\n",
+    "Las siguientes funciones son para armar el conjunto de clips que será utilizado por el modelo. Se utiliza la clase Sliding Window anteriormente definida para la creación de los clips, incluyendo las transformaciones definidas anteriormente según si los videos son para entrenamiento o para validación/test, utilizando DataLoader."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 62,
    "id": "69e81210",
@@ -437,8 +475,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8467e825",
+   "metadata": {},
+   "source": [
+    "### Creación del modelo\n",
+    "Funciones para creación del modelo y carga de pesos preentrenados cuando se utilicen. Se parametrizan algunas opciones para la creación, como el drop_out, la cantidad de clases y el congelamiento de capas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "db8e1320",
    "metadata": {},
    "outputs": [],
@@ -450,7 +497,7 @@
     "\n",
     "\n",
     "def crear_modelo_i3d(\n",
-    "        dropout_p: float,                       # ← prob. de Dropout en la head\n",
+    "        dropout_p: Optional[float] = None,                   \n",
     "        freeze_until: Union[int, Iterable[int]] = 4,\n",
     "        pretrain_path: Optional[str] = PRETRAINED_MODEL,\n",
     "        num_clases: int = 3,\n",
@@ -476,9 +523,15 @@
     "\n",
     "        # 2) Head: Dropout + proyección\n",
     "        head = model.blocks[-1]\n",
-    "        head.dropout = nn.Dropout(dropout_p)\n",
-    "        head.proj    = nn.Linear(head.proj.in_features, num_clases)\n",
-    "        print(f\"✅ Head: Dropout {dropout_p}  |  proyección → {num_clases} clases\")\n",
+    "        if dropout_p is None:\n",
+    "            head.dropout = nn.Identity()          # arquitectura sin Dropout\n",
+    "            print(\"✅ Head: SIN Dropout\")\n",
+    "        else:\n",
+    "            head.dropout = nn.Dropout(dropout_p)\n",
+    "            print(f\"✅ Head: Dropout p={dropout_p}\")\n",
+    "\n",
+    "        head.proj = nn.Linear(head.proj.in_features, num_clases)\n",
+    "        print(f\"   ↳ proyección → {num_clases} clases\")\n",
     "\n",
     "        # 3) Congelado selectivo del backbone\n",
     "        if freeze_backbone:\n",
@@ -594,8 +647,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "264d3fbb",
+   "metadata": {},
+   "source": [
+    "## Función de entrenamiento\n",
+    "En esta función se condensa todo el flujo de entrenamiento de un modelo, a partir de distintos parámetros y utilizando los clips de train y validación construidos con dataLoader y Sliding Window. Se utiliza Mixed Precision y otras adaptaciones para mejorar rendimiento de uso de GPU. Se incluye un early stopping y se guardan los checkpoints (en caso de interrupción para continuar entrenamiento) y el mejor modelo en caso de detectar sobre-ajuste. Además, se exportan en un .csv las métricas del entrenamiento, para su posterior análisis. Se incorporan acá diferentes configuraciones como el uso de un scheduler para el LR y un batch accumulation, para aumentar el tamaño del batch virtualmente, dando mayor estabilidad al entrenamiento, en condiciones donde la GPU no sea capaz de manejar un batch real más grande. Se incluye una etapa de validación tras cada época."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "ea50b6ff",
    "metadata": {},
    "outputs": [],
@@ -614,7 +676,7 @@
     "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(\n",
     "        optimizer, mode='min', factor=0.3, patience=2\n",
     "    )\n",
-    "    LABEL_SMOOTH = 0.10        # pon 0 → sin smoothing\n",
+    "    LABEL_SMOOTH = 0.10    \n",
     "\n",
     "    if class_weights is not None:\n",
     "        criterion = nn.CrossEntropyLoss(\n",
@@ -915,6 +977,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f45824f4",
+   "metadata": {},
+   "source": [
+    "# Primer Experimento (Dataset limpio)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ba949b71",
@@ -1107,6 +1177,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79ec3dd3",
+   "metadata": {},
+   "source": [
+    "# Segundo experimento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a176a935",
@@ -1267,6 +1345,14 @@
     "train_loader, val_loader = recolectar_datasets()\n",
     "\n",
     "entrenar_modelo(model, train_loader, val_loader, device, EPOCHS, config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "102d5378",
+   "metadata": {},
+   "source": [
+    "# Tercer experimento"
    ]
   },
   {
@@ -1501,6 +1587,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64fe101d",
+   "metadata": {},
+   "source": [
+    "# Cuarto experimento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8140897b",
@@ -1551,7 +1645,50 @@
       "\n",
       "📅 --- Época 1/10 ---\n",
       "✅ Primer batch cargado y procesado.\n",
-      "   [   1/2872] Loss: 0.7416 | Acc: 100.00% | ETA: 9405s | Preds: {'Normal': 1, 'Robo': 1, 'Violencia': 1} | GPU: 0.6GB / peak: 1.1GB\n"
+      "   [   1/2872] Loss: 0.7416 | Acc: 100.00% | ETA: 9405s | Preds: {'Normal': 1, 'Robo': 1, 'Violencia': 1} | GPU: 0.6GB / peak: 1.1GB\n",
+      "   [ 201/2872] Loss: 0.5545 | Acc: 99.83% | ETA: 9923s | Preds: {'Normal': 1, 'Robo': 1, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [ 401/2872] Loss: 0.4292 | Acc: 99.75% | ETA: 9208s | Preds: {'Normal': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [ 601/2872] Loss: 0.2958 | Acc: 99.72% | ETA: 8449s | Preds: {'Robo': 1, 'Violencia': 2} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [ 801/2872] Loss: 0.3340 | Acc: 99.71% | ETA: 7805s | Preds: {'Normal': 1, 'Robo': 2} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1001/2872] Loss: 0.3196 | Acc: 99.70% | ETA: 7090s | Preds: {'Normal': 1, 'Robo': 2} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1201/2872] Loss: 0.3216 | Acc: 99.72% | ETA: 6367s | Preds: {'Normal': 1, 'Robo': 2} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1401/2872] Loss: 0.2986 | Acc: 99.71% | ETA: 5679s | Preds: {'Normal': 1, 'Robo': 1, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1601/2872] Loss: 0.3547 | Acc: 99.73% | ETA: 4939s | Preds: {'Normal': 2, 'Robo': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1801/2872] Loss: 0.3518 | Acc: 99.69% | ETA: 4155s | Preds: {'Robo': 3} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2001/2872] Loss: 0.3034 | Acc: 99.68% | ETA: 3373s | Preds: {'Normal': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2201/2872] Loss: 0.3307 | Acc: 99.71% | ETA: 2586s | Preds: {'Robo': 3} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2401/2872] Loss: 0.4274 | Acc: 99.69% | ETA: 1808s | Preds: {'Robo': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2601/2872] Loss: 0.3313 | Acc: 99.71% | ETA: 1036s | Preds: {'Normal': 3} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2801/2872] Loss: 0.3452 | Acc: 99.70% | ETA: 270s | Preds: {'Normal': 1, 'Robo': 1, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2872/2872] Loss: 0.3242 | Acc: 99.71% | ETA:   0s | Preds: {'Normal': 2, 'Robo': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "\n",
+      "🔍 Validando al final de la época 1...\n",
+      "   ✅ Época 1 completada en 10952s\n",
+      "      Train Loss: 0.3552, Train Acc: 99.71%\n",
+      "      Valid Loss: 0.9205, Valid Acc: 66.09%\n",
+      "      LR actual: 5.00e-06\n",
+      "      ⚠️ SOBREAJUSTE DETECTADO: Gap Loss = 0.565\n",
+      "      ⚠️ SOBREAJUSTE DETECTADO: Gap Accuracy = 33.6%\n",
+      "      ⚠️ Posible sobreajuste: Val Loss 0.921 >> Train Loss 0.355\n",
+      "💾 Checkpoint N°1 guardado en checkpoint_latest.pth\n",
+      "   ⭐ Nuevo mejor modelo guardado (Val Loss: 0.9205)\n",
+      "      VRAM máxima usada: 1.3 GB\n",
+      "\n",
+      "📅 --- Época 2/10 ---\n",
+      "✅ Primer batch cargado y procesado.\n",
+      "   [   1/2872] Loss: 0.3029 | Acc: 100.00% | ETA: 10920s | Preds: {'Robo': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.2GB\n",
+      "   [ 201/2872] Loss: 0.3284 | Acc: 100.00% | ETA: 9997s | Preds: {'Robo': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [ 401/2872] Loss: 0.2742 | Acc: 99.83% | ETA: 9348s | Preds: {'Normal': 1, 'Violencia': 2} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [ 601/2872] Loss: 0.3176 | Acc: 99.78% | ETA: 8706s | Preds: {'Normal': 2, 'Robo': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [ 801/2872] Loss: 0.3119 | Acc: 99.79% | ETA: 7984s | Preds: {'Normal': 1, 'Robo': 1, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1001/2872] Loss: 0.2759 | Acc: 99.73% | ETA: 7189s | Preds: {'Normal': 1, 'Violencia': 2} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1201/2872] Loss: 0.3109 | Acc: 99.78% | ETA: 6430s | Preds: {'Robo': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1401/2872] Loss: 0.3003 | Acc: 99.81% | ETA: 5653s | Preds: {'Robo': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1601/2872] Loss: 0.3128 | Acc: 99.77% | ETA: 4898s | Preds: {'Normal': 3} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [1801/2872] Loss: 0.2940 | Acc: 99.72% | ETA: 4132s | Preds: {'Normal': 2, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2001/2872] Loss: 0.2956 | Acc: 99.70% | ETA: 3376s | Preds: {'Normal': 1, 'Robo': 1, 'Violencia': 1} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2201/2872] Loss: 0.3284 | Acc: 99.71% | ETA: 2610s | Preds: {'Normal': 1, 'Robo': 2} | GPU: 0.7GB / peak: 1.3GB\n",
+      "   [2401/2872] Loss: 0.2819 | Acc: 99.74% | ETA: 1846s | Preds: {'Robo': 1, 'Violencia': 2} | GPU: 0.7GB / peak: 1.3GB\n"
      ]
     }
    ],
@@ -1594,7 +1731,7 @@
     "cls_counts = torch.tensor([165498, 172315, 141269], dtype=torch.float32)\n",
     "class_weights = (1. / cls_counts)\n",
     "class_weights = class_weights / class_weights.sum() * len(cls_counts)\n",
-    "print(\"Pesos por clase:\", class_weights.numpy())         #  👈 ahora sí existe\n",
+    "print(\"Pesos por clase:\", class_weights.numpy())   \n",
     "print(\"Etiqueta 0 = Normal, 1 = Robo, 2 = Violencia\")\n",
     "\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
@@ -1612,6 +1749,121 @@
     "    config,\n",
     "    class_weights.to(device)  \n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecb43048",
+   "metadata": {},
+   "source": [
+    "# Evaluación sobre test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "970ca008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch, numpy as np, pandas as pd\n",
+    "from pathlib import Path\n",
+    "from torch.utils.data import DataLoader\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "from tqdm import tqdm\n",
+    "import seaborn as sns; import matplotlib.pyplot as plt\n",
+    "\n",
+    "LABELS        = [\"Normal\", \"Robo\", \"Violencia\"]\n",
+    "CLIP_DURATION = 2.56       \n",
+    "NUM_FRAMES    = 32\n",
+    "STRIDE        = 1.0\n",
+    "BATCH_SIZE    = 3\n",
+    "DEVICE        = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# MODELOS\n",
+    "MODELS = {\n",
+    "    \"exp1_clean\"  : (\"best_i3d_exp1.pth\", 0.30, (0,1,2,3,4)),\n",
+    "    \"exp3_clean\"  : (\"best_i3d_exp3.pth\", 0.50, (0,1,2,3)),\n",
+    "    \"exp4_clean\"  : (\"best_i3d_exp4.pth\", 0.60, (0,1,2,3,4)),\n",
+    "    \"exp_raw\"     : (\"i3d_finetuned_violencia_robo_normal.pth\",  None, (0,1,2,3,4,5))  # sin dropout\n",
+    "}\n",
+    "\n",
+    "# DATASET DE TEST\n",
+    "TEST_DIR = Path(\"./tav_clean/test\")\n",
+    "test_paths = [p for p in TEST_DIR.rglob(\"*.mp4\")]\n",
+    "print(f\"🗂️  Videos de test: {len(test_paths)}\")\n",
+    "\n",
+    "test_dataset = SlidingWindowVideoDataset(\n",
+    "    video_paths=test_paths,\n",
+    "    clip_duration=CLIP_DURATION,\n",
+    "    stride=STRIDE,\n",
+    "    num_frames=NUM_FRAMES,\n",
+    "    transform=VAL_TRANSFORM            \n",
+    ")\n",
+    "\n",
+    "test_loader = DataLoader(\n",
+    "    test_dataset, batch_size=BATCH_SIZE, shuffle=False,\n",
+    "    num_workers=0, pin_memory=True\n",
+    ")\n",
+    "\n",
+    "# EVALUACIÓN DE MODELOS\n",
+    "def evaluate(model, loader):\n",
+    "    model.eval()\n",
+    "    y_true, y_pred = [], []\n",
+    "    with torch.no_grad():\n",
+    "        for batch in tqdm(loader, desc=\"infer\", leave=False):\n",
+    "            x  = batch[\"video\"].to(DEVICE, non_blocking=True)\n",
+    "            yt = batch[\"label\"].to(DEVICE, non_blocking=True)\n",
+    "\n",
+    "            yp = model(x).argmax(1)\n",
+    "            y_true.append(yt.cpu())\n",
+    "            y_pred.append(yp.cpu())\n",
+    "\n",
+    "    y_true = torch.cat(y_true).numpy()\n",
+    "    y_pred = torch.cat(y_pred).numpy()\n",
+    "\n",
+    "    rep = classification_report(\n",
+    "        y_true, y_pred, target_names=LABELS, digits=4, output_dict=True)\n",
+    "    cm  = confusion_matrix(y_true, y_pred)\n",
+    "\n",
+    "    return rep, cm\n",
+    "\n",
+    "results = {}\n",
+    "for nickname, (ckpt_path, dp, freeze_set) in MODELS.items():\n",
+    "    print(f\"\\n🔍 Evaluando {nickname}\")\n",
+    "    model = crear_modelo_i3d(\n",
+    "                dropout_p=dp,      \n",
+    "                freeze_backbone=False,\n",
+    "                pretrain_path=None,\n",
+    "                num_clases=3)\n",
+    "    state = torch.load(ckpt_path, map_location=\"cpu\")\n",
+    "    model.load_state_dict(state, strict=True)\n",
+    "    model.to(DEVICE)\n",
+    "\n",
+    "    rep, cm = evaluate(model, test_loader)\n",
+    "    results[nickname] = {\"rep\": rep, \"cm\": cm}\n",
+    "\n",
+    "# Resumen de resultados\n",
+    "rows = []\n",
+    "for name, out in results.items():\n",
+    "    rows.append([\n",
+    "        name,\n",
+    "        out[\"rep\"][\"accuracy\"],\n",
+    "        out[\"rep\"][\"Violencia\"][\"f1-score\"],\n",
+    "        out[\"rep\"][\"Robo\"][\"f1-score\"],\n",
+    "        out[\"rep\"][\"Normal\"][\"f1-score\"]\n",
+    "    ])\n",
+    "df = pd.DataFrame(rows, columns=[\"Modelo\",\"Acc\",\"F1-Viol\",\"F1-Robo\",\"F1-Norm\"])\n",
+    "print(df.sort_values(\"Acc\", ascending=False).to_string(index=False))\n",
+    "\n",
+    "# Matrices de confusión\n",
+    "for name, out in results.items():\n",
+    "    plt.figure(figsize=(4,3))\n",
+    "    sns.heatmap(out[\"cm\"], annot=True, fmt=\"d\",\n",
+    "                xticklabels=LABELS, yticklabels=LABELS, cmap=\"Blues\")\n",
+    "    plt.title(f\"Confusión – {name}\")\n",
+    "    plt.xlabel(\"Predicción\"); plt.ylabel(\"Real\")\n",
+    "    plt.tight_layout(); plt.show()"
    ]
   }
  ],
