Correcciones en funcion de test

--- a/i3dcrimefinetuning.ipynb
+++ b/i3dcrimefinetuning.ipynb
@@ -2106,8 +2106,57 @@
    "execution_count": null,
    "id": "970ca008",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🗂️  Videos de test: 47\n",
+      "📊 Total de clips generados: 5268\n",
+      "\n",
+      "🔍 Evaluando exp1_clean\n",
+      "🔄 Creando modelo I3D-ResNet50…\n",
+      "✅ Head: Dropout 0.3  |  proyección → 3 clases\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "infer:   0%|          | 1/1756 [00:01<52:03,  1.78s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⏱️ Primer batch: 0.53 s. Total batches: 1756. Estimado total: 15.6 min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "infer:   0%|          | 5/1756 [00:12<1:15:55,  2.60s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⏱️ Batch promedio (1-5): 0.52 s. Estimado total: 15.1 min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "infer:   1%|          | 9/1756 [00:23<1:19:57,  2.75s/it]"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "import torch, numpy as np, pandas as pd\n",
     "from pathlib import Path\n",
     "from torch.utils.data import DataLoader\n",
@@ -2115,7 +2164,6 @@
     "from tqdm import tqdm\n",
     "import seaborn as sns; import matplotlib.pyplot as plt\n",
     "\n",
-    "LABELS        = [\"Normal\", \"Robo\", \"Violencia\"]\n",
     "CLIP_DURATION = 2.56       \n",
     "NUM_FRAMES    = 32\n",
     "STRIDE        = 1.0\n",
@@ -2126,13 +2174,19 @@
     "MODELS = {\n",
     "    \"exp1_clean\"  : (\"best_i3d_exp1.pth\", 0.30, (0,1,2,3,4)),\n",
     "    \"exp3_clean\"  : (\"best_i3d_exp3.pth\", 0.50, (0,1,2,3)),\n",
-    "    \"exp4_clean\"  : (\"best_i3d_exp4.pth\", 0.60, (0,1,2,3,4)),\n",
-    "    \"exp_raw\"     : (\"i3d_finetuned_violencia_robo_normal.pth\",  None, (0,1,2,3,4,5))  # (si no se usó dropout, se pone None)\n",
+    "    \"exp4_clean\"  : (\"best_i3d_exp4.pth\", 0.60, (0,1,2,3,4))\n",
+    "    #\"exp_raw\"     : (\"i3d_finetuned_violencia_robo_normal.pth\",  None, (0,1,2,3,4,5))  # (si no se usó dropout, se pone None)\n",
     "}\n",
     "\n",
     "# DATASET DE TEST\n",
-    "TEST_DIR = Path(\"./tav_clean/test\")                     # Cambiar según estructura de carpetas\n",
-    "test_paths = [p for p in TEST_DIR.rglob(\"*.mp4\")]\n",
+    "TEST_DIR = Path(\"./tav_clean/testing\")                     # Cambiar según estructura de carpetas\n",
+    "LABELS = [\"Normal\", \"Robo\", \"Violencia\"]\n",
+    "\n",
+    "test_paths = []\n",
+    "for label_idx, label_name in enumerate(LABELS):\n",
+    "    for video in (TEST_DIR / label_name).glob(\"*.mp4\"):\n",
+    "        test_paths.append((video, label_idx))\n",
+    "\n",
     "print(f\"🗂️  Videos de test: {len(test_paths)}\")\n",
     "\n",
     "test_dataset = SlidingWindowVideoDataset(\n",
@@ -2149,17 +2203,28 @@
     ")\n",
     "\n",
     "# EVALUACIÓN DE MODELOS\n",
+    "import time\n",
+    "\n",
     "def evaluate(model, loader):\n",
     "    model.eval()\n",
     "    y_true, y_pred = [], []\n",
+    "    times = []\n",
     "    with torch.no_grad():\n",
-    "        for batch in tqdm(loader, desc=\"infer\", leave=False):\n",
+    "        for i, batch in enumerate(tqdm(loader, desc=\"infer\", leave=False)):\n",
+    "            start = time.time()\n",
     "            x  = batch[\"video\"].to(DEVICE, non_blocking=True)\n",
     "            yt = batch[\"label\"].to(DEVICE, non_blocking=True)\n",
-    "\n",
     "            yp = model(x).argmax(1)\n",
     "            y_true.append(yt.cpu())\n",
     "            y_pred.append(yp.cpu())\n",
+    "            end = time.time()\n",
+    "            times.append(end - start)\n",
+    "            if i == 0:\n",
+    "                print(f\"⏱️ Primer batch: {times[-1]:.2f} s. Total batches: {len(loader)}. \"\n",
+    "                      f\"Estimado total: {times[-1]*len(loader)/60:.1f} min\")\n",
+    "            if i == 4:\n",
+    "                mean_time = sum(times)/len(times)\n",
+    "                print(f\"⏱️ Batch promedio (1-5): {mean_time:.2f} s. Estimado total: {mean_time*len(loader)/60:.1f} min\")\n",
     "\n",
     "    y_true = torch.cat(y_true).numpy()\n",
     "    y_pred = torch.cat(y_pred).numpy()\n",
@@ -2169,6 +2234,7 @@
     "    cm  = confusion_matrix(y_true, y_pred)\n",
     "\n",
     "    return rep, cm\n",
+    "\n",
     "\n",
     "results = {}\n",
     "for nickname, (ckpt_path, dp, freeze_set) in MODELS.items():\n",
